# sweetshop

./: .gitignore  LICENSE  ci-checks.sh  example.py  pyproject.toml
.github/workflows/: ci.yml
src/: pipe.py  pipeline.py  registry.py  worker.py
src/sweetshop/: __init__.py  base_data.py  pipe.py  registry.py  worker.py
src/worker/: __init__.py  abc.py  decorators.py
tests/: conftest.py  test_registry.py
tests/common/: __init__.py  digital_data.py
tests/unit/: test_base_registry.py  test_node.py  test_pipe.py  test_pipe_registry.py  test_registry.py  test_worker.py  test_worker_registry.py
