[project]
name = "sweetshop"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.12"

[dependency-groups]
dev = ["ruff", "ty", "pytest", "pytest-cov"]

[tool.ruff.lint]
extend-select = [
    "I", # isort
]

[tool.pytest.ini_options]
addopts = ["--cache-clear", "--cov"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/sweetshop"]

[tool.coverage.report]
# TODO: Enable this when we have 100% coverage.
# fail_under = 100
show_missing = true
