[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sweetshop"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.12"

[tool.hatch.build.targets.wheel]
packages = ["src/sweetshop"]

[dependency-groups]
dev = ["ruff", "ty", "pytest", "pytest-cov"]

[tool.ruff.lint]
extend-select = [
    "I", # isort
]

[tool.pytest.ini_options]
addopts = ["--cache-clear", "--cov=src/sweetshop"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/sweetshop"]

[tool.coverage.report]
fail_under = 100
show_missing = true
